--- a/.gitignore
+++ b/.gitignore
@@ -53,4 +53,15 @@ logs/
 # Игнорировать application.yaml
 src/main/resources/application.yaml
 
-application.yaml
+application-local.yaml
+
+.git
+.gitignore
+.gradle
+build
+out
+.idea
+*.iml
+Dockerfile
+docker-compose.yml
+deploy
