--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       TZ: ${TZ}
       TG_BOT_TOKEN: ${TG_BOT_TOKEN}
-#      TG_WEBHOOK_SECRET: ${TG_WEBHOOK_SECRET}
+      TG_WEBHOOK_SECRET: ${TG_WEBHOOK_SECRET}
     restart: unless-stopped
     expose:
       - "8080"
