--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,11 @@ services:
       PROXY_PORT: ${PROXY_PORT}
       PROXY_USER: ${PROXY_USER}
       PROXY_PASSWORD: ${PROXY_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+      R2DBC_URL: ${R2DBC_URL}
+      JDBC_URL: ${JDBC_URL}
     restart: unless-stopped
     expose:
       - "8080"
