--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,12 @@ services:
     volumes:
       - ./deploy/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./deploy/nginx/certs:/etc/nginx/certs:ro
+    networks:
+      - app-net
 
 networks:
   app-net:
-    external: true
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 172.25.0.0/16
