add implementation postgresql and liquibase

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,23 @@
 services:
+  postgres:
+    image: postgres:16
+    container_name: ai-assistant-postgres
+    restart: unless-stopped
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+      TZ: ${TZ}
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+      - pgbackups:/backups
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB} || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks: [app-net]
+
   app:
     build: .
     container_name: ai-assistant-app
@@ -19,8 +38,7 @@ services:
     restart: unless-stopped
     expose:
       - "8080"
-    networks:
-      - app-net
+    networks: [app-net]
 
   nginx:
     image: nginx:1.27-alpine
@@ -34,12 +52,9 @@ services:
     volumes:
       - ./deploy/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./deploy/nginx/certs:/etc/nginx/certs:ro
-    networks:
-      - app-net
+    networks: [app-net]
 
 networks:
   app-net:
-    driver: bridge
-    ipam:
-      config:
-        - subnet: 172.25.0.0/16
+    external: true
+    name: ai-assistant_app-net
