--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,7 @@
 databaseChangeLog:
   - include:
-      file: db/changelog/changes/001-init.yaml
+      file: db/changelog/changes/001-create-audit-log-table.sql
+  - include:
+      file: db/changelog/changes/002-create-conversation-queue.sql
+  - include:
+      file: db/changelog/changes/003-create-system-promnt.sql
