--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -80,7 +80,10 @@ app:
 
   timezone: Europe/Moscow
 
-
+  scheduler:
+    enabled: true
+    poll:
+      enabled: true
 
 # ======= Logging =======
 logging:
