--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -5,3 +5,5 @@ databaseChangeLog:
       file: db/changelog/changes/002-create-conversation-queue.sql
   - include:
       file: db/changelog/changes/003-create-system-promnt.sql
+  - include:
+      file: db/changelog/changes/004-first-system-promnt.sql
