add migration/scheduler/handler/service and first logic with async work

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -7,3 +7,7 @@ databaseChangeLog:
       file: db/changelog/changes/003-create-system-promnt.sql
   - include:
       file: db/changelog/changes/004-first-system-promnt.sql
+  - include:
+      file: db/changelog/changes/005-create-dialog-metainfo.sql
+  - include:
+      file: db/changelog/changes/006-rename-conversation-queue.yaml
