--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -13,3 +13,5 @@ databaseChangeLog:
       file: db/changelog/changes/006-insert-initial-system-prompt.sql
   - include:
       file: db/changelog/changes/007-add-column-level_of_response_completeness.sql
+  - include:
+      file: db/changelog/changes/008-alter-dialog_metainfo_title_not_null.sql
